--- a/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
@@ -105,22 +105,21 @@
 		</Grid.RowDefinitions>
 		<StackPanel Orientation="Horizontal"
 							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
-			<Label x:Name="CalcResult" Content="C(BackSpace)ボタンは1クリックで1文字、"/>
-			<Label x:Name="CalcMemo" Content=""/>
+			<Label x:Name="CalcResult" Content="C(BackSpace)ボタンは1クリックで1文字、" />
+			<Label x:Name="CalcMemo" Content=""	/>
 		</StackPanel>
 		<StackPanel Orientation="Horizontal"
 							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
 			<Label x:Name="CalcOperation" Content=""
-							Width="Auto"
-							/>
+							Width="Auto" />
 			<TextBox x:Name="CalcProcess" Text="CA(Delete)で全消去"
-							FontSize="18" MinWidth="280"
+							FontSize="18" MinWidth="280" IsReadOnly="True" 
 							/>
 			<!--Content="{Binding process ,Mode=TwoWay}"-->
 		</StackPanel>
 		<Button x:Name="ClearBt" Content="C"
 					Grid.Row="2" Grid.Column="0" 
-					Command="{Binding ClearClick}" Click="ClearBt_Click" />
+					Command="{Binding ClearClick}" Click="ClearBt_Click" KeyDown="ClearBt_KeyDown" />
 
 		<Button x:Name="SlashBt" Content="/" 
 					Grid.Row="2" Grid.Column="1" FontSize="14"
@@ -162,9 +161,9 @@
 					Grid.Row="5" Grid.Column="2"
 					Command="{Binding ThreeClick}" Click="ThreeBt_Click"  />
 
-		<Button x:Name="ClearAllBt" Content="CA" 
-					Grid.Row="6" Grid.Column="0"  Background="#FFFBF3F3"
-					Click="ClearAllBt_Click"
+		<Button x:Name="ClearAllBt" Content="CE" 
+					Grid.Row="6" Grid.Column="0"
+					Click="ClearAllBt_Click" KeyDown="ClearAllBt_KeyDown"
 					/>
 		<Button x:Name="ZeroBt" Content="0" 
 					Grid.Row="6" Grid.Column="1"
