--- a/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
@@ -9,6 +9,7 @@
              d:DesignHeight="350" d:DesignWidth="300" 
 			 FocusManager.FocusedElement="{Binding ElementName=CalcProcess}"
 			 Unloaded="UserControl_Unloaded" 
+			PreviewKeyDown="UserControl_PreviewKeyDown"
 			 KeyDown="UserControl_KeyDown">
 	<!---->
 	<UserControl.Resources>
@@ -100,65 +101,72 @@
 		<Button x:Name="ClearBt" Content="C"
 					Grid.Row="2" Grid.Column="0" 
 					Template="{StaticResource Calcbutton}"
-					KeyDown="ClearBt_KeyDown"
-					Command="{Binding ClearClick}" 
 					Click="ClearBt_Click">
-			<!--<Button.InputBindings>
-				<KeyBinding Key="Backspace" Command="{Binding ClearClick}" />
-			</Button.InputBindings>-->
 		</Button>
+		<!--Command="{Binding ClearClick}"-->
 
 		<Button x:Name="SlashBt" Content="/" 
 					Grid.Row="2" Grid.Column="1" FontSize="14"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding SlashClick}" Click="SlashBt_Click"  />
+					Click="SlashBt_Click"  />
+		<!--Command="{Binding SlashClick}"-->
 		<Button x:Name="AsteriskBt" Content="*" 
 					Grid.Row="2" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding AsteriskClick}" Click="AsteriskBt_Click"  />
+					Click="AsteriskBt_Click"  />
+		<!--Command="{Binding AsteriskClick}"-->
 		<Button x:Name="MinusBt" Content="-" 
 					Grid.Row="2" Grid.Column="3"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding MinusClick}" Click="MinusBt_Click" />
+					Click="MinusBt_Click" />
+		<!--Command="{Binding MinusClick}"-->
 
 		<Button x:Name="SevenBt" Content="7" 
 					Grid.Row="3" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding SevenClick}" Click="SevenBt_Click"  />
+					Click="SevenBt_Click"  />
+		<!--Command="{Binding SevenClick}"-->
 		<Button x:Name="EightBt" Content="8" 
 					Grid.Row="3" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding EightClick}" Click="EightBt_Click"  />
+					Click="EightBt_Click"  />
+		<!--Command="{Binding EightClick}"-->
 		<Button x:Name="NineBt" Content="9" 
 					Grid.Row="3" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding NineClick}" Click="NineBt_Click"  />
-
+					Click="NineBt_Click"  />
+		<!--Command="{Binding NineClick}"-->
 		<Button x:Name="FourBt" Content="4" 
 					Grid.Row="4" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding FourBtClick}" Click="FourBt_Click"  />
+					Click="FourBt_Click"  />
+		<!--Command="{Binding FourBtClick}"-->
 		<Button x:Name="FiveBt" Content="5" 
 					Grid.Row="4" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding FiveClick}"  Click="FiveBt_Click"  />
+					Click="FiveBt_Click"  />
+		<!--Command="{Binding FiveClick}"-->
 		<Button x:Name="SixBt" Content="6" 
 					Grid.Row="4" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding SixClick}" Click="SixBt_Click"  />
+					Click="SixBt_Click"  />
+		<!--Command="{Binding SixClick}"-->
 
 		<Button x:Name="OneBt" Content="1" 
 					Grid.Row="5" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding OneBtClick}" Click="OneBt_Click"  />
+					Click="OneBt_Click"  />
+		<!--Command="{Binding OneBtClick}"-->
 		<Button x:Name="TwoBt" Content="2" 
 					Grid.Row="5" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding TwoClick}" Click="TwoBt_Click"  />
+					Click="TwoBt_Click"  />
+		<!--Command="{Binding TwoClick}"-->
 		<Button x:Name="ThreeBt" Content="3" 
 					Grid.Row="5" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding ThreeClick}" Click="ThreeBt_Click"  />
+					Click="ThreeBt_Click"  />
+		<!--Command="{Binding ThreeClick}"-->
 
 		<Button x:Name="ClearAllBt" Content="CE" 
 					Grid.Row="6" Grid.Column="0"
@@ -168,20 +176,24 @@
 		<Button x:Name="ZeroBt" Content="0" 
 					Grid.Row="6" Grid.Column="1"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding ZeroClick}" Click="ZeroBt_Click"  />
+					Click="ZeroBt_Click"  />
+		<!--Command="{Binding ZeroClick}"-->
 		<Button x:Name="PeriodBt" Content="." 
 					Grid.Row="6" Grid.Column="2"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding PeriodClick}" Click="PeriodBt_Click"  />
-		
+					Click="PeriodBt_Click"  />
+		<!--Command="{Binding PeriodClick}"-->
+
 		<Button x:Name="PlusBt" Content="+" 
 					Grid.Row="3" Grid.Column="3" Grid.RowSpan="2"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding PlusClick}" Click="PlusBt_Click"  />
+					Click="PlusBt_Click"  />
+		<!--Command="{Binding PlusClick}"-->
 		<Button x:Name="EnterBt" Content="Enter"  FontSize="12"
 					Grid.Row="5" Grid.Column="3" Grid.RowSpan="2"
 					Template="{StaticResource Calcbutton}"
-					Command="{Binding PlusClick}" Click="EnterBt_Click"  />
+					Click="EnterBt_Click"  />
+		<!--Command="{Binding PlusClick}"-->
 
 	</Grid>
 
