--- a/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			 xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TabCon.Controls"
              mc:Ignorable="d" 
@@ -11,7 +12,9 @@
 			 Unloaded="UserControl_Unloaded" 
 			PreviewKeyDown="UserControl_PreviewKeyDown"
 			 KeyDown="UserControl_KeyDown">
-	<!---->
+	<!--
+				 xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+	-->
 	<UserControl.Resources>
 		<Style TargetType="Button">
 			<Setter Property="FontSize" Value="24" />
@@ -33,7 +36,6 @@
 			</Border>
 
 			<ControlTemplate.Triggers>
-
 				<!--マウスオーバー時-->
 				<Trigger Property="IsMouseOver"
                          Value="True">
@@ -49,24 +51,9 @@
                             Property="Background"
                             Value="#FFD7E7FB" />
 				</Trigger>
-
-				<!--キーボード フォーカス状態-->
-				<!--<Trigger Property="IsKeyboardFocused"
-                         Value="true">
-                    <Setter TargetName="border"
-                            Property="Background"
-                            Value="Yellow" />
-                </Trigger>-->
-
 			</ControlTemplate.Triggers>
-
 		</ControlTemplate>
-
 	</UserControl.Resources>
-	<!--<UserControl.InputBindings>
-		<KeyBinding Command="{Binding ElementName=ClearBt ,TargetNullValue=Click}"
-              Gesture="Back" />
-	</UserControl.InputBindings>-->
 
 	<Grid>
 		<Grid.ColumnDefinitions>
@@ -86,8 +73,10 @@
 		</Grid.RowDefinitions>
 		<StackPanel Orientation="Horizontal"
 							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
-			<Label x:Name="CalcResult" Content="C(BackSpace)ボタンは1クリックで1文字、" />
-			<Label x:Name="CalcMemo" Content=""	/>
+			<Label x:Name="CalcResult" Content="結果" FontSize="18"/>
+			<!--Content="C(BackSpace)ボタンは1クリックで1文字、"-->
+			<Label  x:Name="CalcMemo"
+						Content="ぺんぎんとくじらとラクダが&#10;ピクニックに行きました"/>
 		</StackPanel>
 		<StackPanel Orientation="Horizontal"
 							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
@@ -98,8 +87,8 @@
 							/>
 			<!--Content="{Binding process ,Mode=TwoWay}"-->
 		</StackPanel>
-		<Button x:Name="ClearBt" Content="C"
-					Grid.Row="2" Grid.Column="0" 
+		<Button x:Name="ClearBt" Content="C&#xa;BackSpace"  FontSize="12"
+					Grid.Row="2" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
 					Click="ClearBt_Click">
 		</Button>
@@ -168,7 +157,7 @@
 					Click="ThreeBt_Click"  />
 		<!--Command="{Binding ThreeClick}"-->
 
-		<Button x:Name="ClearAllBt" Content="CE" 
+		<Button x:Name="ClearAllBt" Content="CE&#xa;Delete"  FontSize="12"
 					Grid.Row="6" Grid.Column="0"
 					Template="{StaticResource Calcbutton}"
 					Click="ClearAllBt_Click"
