--- a/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
@@ -1,4 +1,6 @@
-﻿<Page xmlns:CS_Calculator="clr-namespace:CS_Calculator;assembly=CS_Calculator"  xmlns:Controls="clr-namespace:TabCon.Controls"  x:Class="TabCon.Views.ParrtsTestView"
+﻿<Page xmlns:CS_Calculator="clr-namespace:CS_Calculator;assembly=CS_Calculator"  
+	xmlns:Controls="clr-namespace:TabCon.Controls"  
+	x:Class="TabCon.Views.ParrtsTestView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -32,20 +34,20 @@
 			<Label  Content="フォントサイズ" 
 					Margin="5,5,5,5" VerticalAlignment="Center"  
 					/>
-			<TextBox 	x:Name="CalcTextFontSize" Text="18"
+			<TextBox 	x:Name="CalcTextFontSize" Text="{Binding CalcTextFontSize,Mode=TwoWay}"
 						Margin="5,5,5,5" VerticalAlignment="Center" TextChanged="CalcTextFontSize_TextChanged"  
 						/>
 			<Label  Content="幅" 
 					Margin="5,5,5,5" VerticalAlignment="Center"  
 					/>
-			<TextBox 	x:Name="CalcTexWidth" Text="120"
+			<TextBox 	x:Name="CalcTexWidth" Text="{Binding CalcTexWidth,Mode=TwoWay}"
 						Margin="5,5,5,5" VerticalAlignment="Center" TextChanged="CalcTexWidth_TextChanged"  
 						/>
 			<Label  Content="ダイアログタイトル" 
 					Margin="5,5,5,5" VerticalAlignment="Center"  
 					/>
-			<TextBox 	x:Name="CalcTextDLogTitol" Text="電卓を表示するフィールドから"
-						Margin="5,5,5,5" VerticalAlignment="Center"  
+			<TextBox 	x:Name="CalcTextDLogTitol" Text="{Binding CalcTextDLogTitol,Mode=TwoWay}"
+						Margin="5,5,5,5" VerticalAlignment="Center" 
 						/>
 
 		</StackPanel>
@@ -56,7 +58,9 @@
 												FieldWidth="200"
 												ViewTitle="電卓を表示するフィールドから"
 													/>
-
+		<!--
+												FieldFontSize="{Binding ElementName=CalcTextDLogTitol}"
+		"{Binding ElementName=CalcTextDLogTitol}"-->
 		<Label Content=">参照>"
 					Grid.Row="1" Grid.Column="2"
 			/>
