--- a/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
@@ -57,16 +57,17 @@
 		<StackPanel Orientation="Horizontal"
 							Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"
 							Margin="0,5,5,5">
+			<!--電卓で計算した結果-->
 			<TextBox x:Name="Bt2Tbox"
 							Text="{Binding CalcResult ,Mode=TwoWay}"/>
+			<!--電卓を表示するボタン
+				TargetTextBoxに計算結果を書き写すフィールドを指定
+				ViewTitleはダイヤログタイトルで指定しなければフィールド名を表示-->
 			<Controls:CalculatorButton  x:Name="CalcCallBt" 
-			/>
-			<!--
 						TargetTextBox="{Binding ElementName=Bt2Tbox}"
 						ViewTitle="{Binding ElementName=CalcTextDLogTitol}"
-
-			FieldFontSize="18"
-							FieldWidth="300"
+													/>
+			<!--
 							ViewTitle="計算値をフィールドへ"-->
 		</StackPanel>
 
